@@ -1,3 +1,8 @@
+2008-11-10  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/38021
+	* g++.dg/cpp0x/enum1.C: New test.
+
 2008-11-02  Ralph Loader  <suckfish@ihug.co.nz>
 
 	PR middle-end/37807
